--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about Ian Qian
 username: Ian Qian
 user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
 user_title: Software Developer
-email: slqian@stu.suda.edu.cn
+email: Shenglaq@usc.edu
 twitter_username: 7Shenglan
 github_username:  IanQian
 gplus_username:  lorem_ipsum
